<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:background="@drawable/northernlights"
                                                   android:id="@+id/activity_main"
                                                   android:layout_height="match_parent">


	<TextView
			android:text="@string/hikers_watch2"
			android:layout_width="wrap_content"
			android:layout_height="0dp"
			android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			android:textColor="@color/common_google_signin_btn_text_dark_pressed"
			android:textAlignment="center"
			android:fontFamily="sans-serif-smallcaps"
			android:textSize="36sp"
			android:contentDescription="@string/hikers_watch"
			android:layout_marginTop="32dp"/>

	<TextView
			android:text="@string/latitude"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/latitude"
			android:fontFamily="sans-serif-smallcaps"
			android:textSize="18sp"
			android:textColor="@color/common_google_signin_btn_text_dark_pressed"
			android:layout_marginTop="16dp"
			app:layout_constraintTop_toBottomOf="@+id/textView"
			app:layout_constraintStart_toStartOf="@+id/textView"/>
	<TextView
			android:text="@string/longitude"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/Longitude"
			android:contentDescription="@string/longitude"
			android:textSize="18sp" android:fontFamily="sans-serif-smallcaps"
			android:textColor="@color/common_google_signin_btn_text_dark_pressed"
			android:layout_marginTop="16dp"
			app:layout_constraintTop_toBottomOf="@+id/latitude"
			app:layout_constraintStart_toStartOf="@+id/textView"/>
	<TextView
			android:text="@string/accuracy"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/Accuracy"
			android:contentDescription="@string/accuracy"
			android:textSize="18sp"
			android:fontFamily="sans-serif-smallcaps"
			android:textColor="@color/common_google_signin_btn_text_dark_pressed"
			app:layout_constraintStart_toStartOf="@+id/textView" android:layout_marginTop="16dp"
			app:layout_constraintTop_toBottomOf="@+id/Longitude"/>

	<TextView
			android:text="@string/Altitude"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/altitude"
			android:contentDescription="@string/Altitude"
			android:textSize="18sp"
			android:fontFamily="sans-serif-smallcaps"
			android:textColor="@color/common_google_signin_btn_text_dark_pressed"
			android:layout_marginTop="16dp"
			app:layout_constraintTop_toBottomOf="@+id/Accuracy"
			app:layout_constraintStart_toStartOf="@+id/textView"/>
	<TextView
			android:text="@string/address"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:id="@+id/address"
			android:contentDescription="@string/address"
			android:textSize="18sp"
			android:fontFamily="sans-serif-smallcaps"
			android:textColor="@color/common_google_signin_btn_text_dark_pressed"
			app:autoSizeTextType="uniform"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="@+id/textView" android:layout_marginTop="16dp"
			app:layout_constraintTop_toBottomOf="@+id/altitude" android:layout_marginEnd="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>